feat: Dnf reduction and structural equality